--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL_API=http://localhost:3001/api
+REACT_APP_PUBLIC_URL_API=http://localhost:3001/public/api
+REACT_APP_PRIVATE_URL_API=http://localhost:3001/protected/api
